--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -11,11 +11,8 @@ steps:
         user: 0:0
     commands:
       - cd plugins/go_replace_words
-      - ls -lah .
-      - id
       - tinygo build -o ../go_replace_words.wasm -target wasip1 -buildmode=c-shared main.go
       - cd -
-      - ls -lah plugins
 
   run_plugin_tests:
     image: node:22-bookworm-slim
@@ -23,7 +20,7 @@ steps:
       LEMMY_DATABASE_URL: postgres://lemmy:password@database:5432
       DO_WRITE_HOSTS_FILE: "1"
     commands:
-      - npm install -g corepack@latest && corepack enable pnpm"
+      - npm install -g corepack@latest && corepack enable pnpm
       - apt-get update && apt-get install -y bash curl postgresql-client golang
       # install tinygo to compile wasm plugins
       # https://tinygo.org/getting-started/install/linux/#ubuntu-debian
