--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -26,10 +26,10 @@ steps:
       # https://tinygo.org/getting-started/install/linux/#ubuntu-debian
       - wget https://github.com/tinygo-org/tinygo/releases/download/v0.36.0/tinygo_0.36.0_amd64.deb
       - dpkg -i tinygo_0.36.0_amd64.deb
-      - bash api_tests/prepare-drone-federation-test.sh
-      - cd api_tests/
+      - bash tests/prepare-drone-federation-test.sh
+      - cd tests/
       - pnpm i
-      - pnpm api-test
+      - pnpm test
 
 services:
   database:
