--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -4,7 +4,7 @@ steps:
     commands:
       - prettier -c .
 
-  build_go_plugins:
+  build_go_plugin:
     image: tinygo/tinygo:latest
     backend_options:
       docker:
@@ -12,7 +12,12 @@ steps:
     commands:
       - cd plugins/go_replace_words
       - tinygo build -o ../go_replace_words.wasm -target wasip1 -buildmode=c-shared main.go
-      - cd -
+
+  build_typescript_plugin:
+    image: node:23-alpine
+    commands:
+      - cd plugins/typescript_push_webhook
+      - npm run build
 
   run_plugin_tests:
     image: node:22-bookworm-slim
@@ -36,6 +41,7 @@ steps:
     settings:
       files:
         - plugins/go_replace_words.wasm
+        - plugins/typescript_push_webhook.wasm
       title: ${CI_COMMIT_TAG##v}
       api-key:
         from_secret: github_token
