--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -16,6 +16,7 @@ steps:
   build_typescript_plugin:
     image: node:23-alpine
     commands:
+      - apt-get update && apt-get install -y --no-install-recommends --no-install-suggests typescript
       - cd plugins/typescript_push_webhook
       - npm run build
 
