--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -3,6 +3,8 @@ steps:
     image: tmknom/prettier:3.2.5
     commands:
       - prettier -c .
+    when:
+      - event: pull_request
 
   build_go_plugin:
     image: tinygo/tinygo:latest
@@ -12,6 +14,8 @@ steps:
     commands:
       - cd plugins/go_replace_words
       - tinygo build -o ../go_replace_words.wasm -target wasip1 -buildmode=c-shared main.go
+    when:
+      - event: pull_request,tag
 
   build_typescript_plugin:
     image: node:23-alpine
@@ -19,6 +23,8 @@ steps:
       - apk add --no-cache typescript
       - cd plugins/typescript_push_webhook
       - npm run build
+    when:
+      - event: pull_request,tag
 
   run_plugin_tests:
     image: node:22-bookworm-slim
@@ -36,6 +42,8 @@ steps:
       - cd tests/
       - pnpm i
       - pnpm test
+    when:
+      - event: pull_request
 
   publish_plugins:
     image: woodpeckerci/plugin-release
