--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -22,6 +22,7 @@ steps:
     commands:
       - apk add --no-cache typescript
       - cd plugins/typescript_push_webhook
+      - npm install
       - npm run build
     when:
       - event: [pull_request, tag]
