--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -22,6 +22,7 @@ steps:
     commands:
       - wget --quiet https://github.com/extism/js-pdk/releases/download/v1.4.0/extism-js-x86_64-linux-v1.4.0.gz -O extism-js.gz
       - gzip -d extism-js.gz
+      - ls -lah
       - mv extism-js-x86_64-linux-v1.4.0 extism-js
       - export PATH=$PATH:($pwd)
       - apk add --no-cache typescript
