--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -11,7 +11,7 @@ steps:
     commands:
       - wget --quiet https://github.com/extism/js-pdk/releases/download/v1.4.0/extism-js-x86_64-linux-v1.4.0.gz -O extism-js.gz
       - gzip -d extism-js.gz
-      - ls -lah
+      - chmod +x extism-js
       - export PATH=$PATH:$(pwd)
       - apk add --no-cache typescript
       - cd plugins/typescript_push_webhook
