--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -19,6 +19,7 @@ steps:
       - apk add --no-cache typescript
       - cd plugins/typescript_push_webhook
       - npm install
+      - echo $PATH
       - extism-js --help
       - npm run build
     when:
