--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -13,13 +13,9 @@ steps:
       - wget --quiet https://github.com/extism/js-pdk/releases/download/v1.4.0/extism-js-x86_64-linux-v1.4.0.gz -O extism-js.gz
       - gzip -d extism-js.gz
       - chmod +x extism-js
-      - export "PATH=$PATH:$(pwd)"
-      - echo $PATH
-      - ls -lah
-      - ls -lah "$(pwd)/extism-js"
+      - mov extism-js /usr/local/bin/
       - cd plugins/typescript_push_webhook
       - npm install
-      - echo $PATH
       - extism-js --help
       - npm run build
     when:
