--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -13,7 +13,8 @@ steps:
       - wget --quiet https://github.com/extism/js-pdk/releases/download/v1.4.0/extism-js-x86_64-linux-v1.4.0.gz -O extism-js.gz
       - gzip -d extism-js.gz
       - chmod +x extism-js
-      - mov extism-js /usr/local/bin/
+      - mv extism-js /usr/local/bin/
+      - ls -la /usr/local/bin/extism-js
       - cd plugins/typescript_push_webhook
       - npm install
       - extism-js --help
