--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -7,9 +7,9 @@ steps:
       - event: pull_request
 
   build_typescript_plugin:
-    image: node:23
+    image: node:22-bookworm-slim
     commands:
-      - apk add --no-cache typescript
+      - apt-get update && apt-get install -y --no-install-recommends --no-install-suggests typescript
       - wget --quiet https://github.com/extism/js-pdk/releases/download/v1.4.0/extism-js-x86_64-linux-v1.4.0.gz -O extism-js.gz
       - gzip -d extism-js.gz
       - chmod +x extism-js
