--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -20,7 +20,7 @@ steps:
       - wget --quiet https://github.com/WebAssembly/binaryen/releases/download/version_122/binaryen-version_122-x86_64-linux.tar.gz -O binaryen.tar.gz
       - tar -xvzf binaryen.tar.gz
       - ls -lah
-      - mv bin/* /usr/local/bin/
+      - mv binaryen-version_122/bin/* /usr/local/bin/
       - cd plugins/typescript_push_webhook
       - npm install
       - npm run build
