--- a/plugins/rust_allowed_voters/Cargo.toml
+++ b/plugins/rust_allowed_voters/Cargo.toml
@@ -9,3 +9,4 @@ crate-type = ["cdylib"]
 [dependencies]
 extism-pdk = "1.3.0"
 serde = { version = "1", features = ["derive"] }
+lemmy_api_common = { git = "https://github.com/LemmyNet/lemmy.git" }
