--- a/.woodpecker.yml
+++ b/.woodpecker.yml
@@ -54,11 +54,11 @@ steps:
       DO_WRITE_HOSTS_FILE: "1"
     commands:
       - npm install -g corepack@latest && corepack enable pnpm
-      - apt-get update && apt-get install -y --no-install-recommends --no-install-suggests bash curl postgresql-client golang wget ca-certificates
+      - apt-get update && apt-get install -y --no-install-recommends --no-install-suggests bash curl postgresql-client golang curl ca-certificates
       # install tinygo to compile wasm plugins
       # https://tinygo.org/getting-started/install/linux/#ubuntu-debian
-      - wget -q https://github.com/tinygo-org/tinygo/releases/download/v0.36.0/tinygo_0.36.0_amd64.deb
-      - dpkg -i tinygo_0.36.0_amd64.deb
+      - curl https://github.com/tinygo-org/tinygo/releases/download/v0.36.0/tinygo_0.36.0_amd64.deb -L -o tinygo.deb
+      - dpkg -i tinygo.deb
       - bash tests/prepare.sh
       - cd tests/
       - pnpm i
