--- a/plugins/rust_lingua/Cargo.toml
+++ b/plugins/rust_lingua/Cargo.toml
@@ -7,7 +7,21 @@ edition = "2024"
 crate-type = ["cdylib"]
 
 [dependencies]
-lingua = { version ="1.7.2", features = ["english"], default-features = false }
+# Enable only the languages which are most common on Lemmy
+# `select l from language l left join post p on l.id = p.language_id group by l.id order by count(p.id) desc;`
+lingua = { version = "1.7.2", default-features = false, features = [
+  "english",
+  "dutch",
+  "german",
+  "french",
+  "spanish",
+  "polish",
+  "danish",
+  "portuguese",
+  "italian",
+  "swedish",
+  "finnish",
+] }
 extism-pdk = "1.3.0"
 serde = { version = "1", features = ["derive"] }
 lemmy_api_common = { git = "https://github.com/LemmyNet/lemmy.git", branch = "plugin-api" }
